--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nativescript-angular": "~6.2.0",
     "nativescript-cardview": "^3.1.1",
     "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-chart": "^3.9.1",
     "reflect-metadata": "~0.1.10",
     "rxjs": "~6.2.0",
     "tns-core-modules": "~5.0.0",
