--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "version": "5.0.0"
     }
   },
-  "description": "NativeScript Application",
+  "description": "HoopFire Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "scripts": {
